--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "moment": "^2.23.0",
-    "mongoose": "^5.4.1",
+    "mongoose": "^5.4.3",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "request": "^2.88.0"
   },
   "devDependencies": {},
   "scripts": {
