--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
-    "moment": "^2.23.0",
-    "mongoose": "^5.4.3",
-    "morgan": "^1.9.1",
+    "mongoose": "^5.4.6",
     "nodemon": "^1.18.9",
     "request": "^2.88.0"
   },
